# pokemon_wordle

./: .flake8  README.md  poke_wordle.py  pokemon_list.csv  pokemon_wordle.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflow/: python-ci.yml
.github/workflows/: python-ci.yml
tests/: test_game.py
