[tool.poetry]
name = "pokemon_wordle"
version = "0.1.0"
description = ""
authors = ["kouya.hirata <atarih.ayuok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
dataclass-csv = "^1.4.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
start = "pokemon_wordle:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"